[gd_scene load_steps=3 format=3 uid="uid://bgkvxlt53f0kq"]

[ext_resource type="Script" path="res://scenes/character/flying_saucer.gd" id="1_7rkjj"]
[ext_resource type="Texture2D" uid="uid://b1t8bhj25b73a" path="res://assets/spaceship.png" id="2_ag7jh"]

[node name="flying_saucer" type="RigidBody2D"]
collision_mask = 14
gravity_scale = 0.125
center_of_mass_mode = 1
center_of_mass = Vector2(0, 7)
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_7rkjj")
engine_power = 200.0
engine_vector_left = Vector2(0.5, -1)
engine_vector_right = Vector2(-0.5, -1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ag7jh")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -112)

[node name="thruster_left" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-14, 12)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="thruster_left_dir" type="RayCast2D" parent="thruster_left"]

[node name="fire_left" type="Label" parent="thruster_left"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_right = 15.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Fire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="thruster_right" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(14, 12)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="thruster_rigth_dir" type="RayCast2D" parent="thruster_right"]

[node name="fire_right" type="Label" parent="thruster_right"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_right = 15.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Fire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, -8, -2, -8, -2, -9, 2, -9, 2, -8, 5, -8, 5, -7, 7, -7, 7, -6, 9, -6, 9, -5, 10, -5, 10, -4, 11, -4, 11, -3, 12, -3, 12, -1, 13, -1, 13, 1, 14, 1, 14, 3, 15, 3, 15, 5, 16, 5, 16, 11, 15, 11, 15, 12, 12, 12, 12, 11, 11, 11, 11, 10, 10, 10, 10, 9, 4, 9, 4, 13, 6, 13, 6, 14, 7, 14, 7, 15, 8, 15, 8, 16, 3, 16, 3, 15, 2, 15, 2, 9, -2, 9, -2, 15, -3, 15, -3, 16, -8, 16, -8, 15, -7, 15, -7, 14, -6, 14, -6, 13, -4, 13, -4, 9, -10, 9, -10, 10, -11, 10, -11, 11, -12, 11, -12, 12, -15, 12, -15, 11, -16, 11, -16, 5, -15, 5, -15, 3, -14, 3, -14, 1, -13, 1, -13, -1, -12, -1, -12, -3, -11, -3, -11, -4, -10, -4, -10, -5, -9, -5, -9, -6, -7, -6, -7, -7, -5, -7)

[node name="Camera2D" type="Camera2D" parent="."]
